wait for csv